<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/telegram_icon"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="270dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_to_telegram"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_start_messaging"
        android:layout_width="390dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/tel_blue"
        android:text="@string/start_messaging"
        android:textSize="20sp" />

</FrameLayout>
